--- a/crt.ipynb
+++ b/crt.ipynb
@@ -98,65 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"2C\": 0,\n",
-      "\"3C\": 40,\n",
-      "\"4C\": 28,\n",
-      "\"5C\": 16,\n",
-      "\"6C\": 4,\n",
-      "\"7C\": 44,\n",
-      "\"8C\": 32,\n",
-      "\"9C\": 20,\n",
-      "\"10C\": 8,\n",
-      "\"JC\": 48,\n",
-      "\"QC\": 36,\n",
-      "\"KC\": 24,\n",
-      "\"AC\": 12,\n",
-      "\"2D\": 13,\n",
-      "\"3D\": 1,\n",
-      "\"4D\": 41,\n",
-      "\"5D\": 29,\n",
-      "\"6D\": 17,\n",
-      "\"7D\": 5,\n",
-      "\"8D\": 45,\n",
-      "\"9D\": 33,\n",
-      "\"10D\": 21,\n",
-      "\"JD\": 9,\n",
-      "\"QD\": 49,\n",
-      "\"KD\": 37,\n",
-      "\"AD\": 25,\n",
-      "\"2H\": 26,\n",
-      "\"3H\": 14,\n",
-      "\"4H\": 2,\n",
-      "\"5H\": 42,\n",
-      "\"6H\": 30,\n",
-      "\"7H\": 18,\n",
-      "\"8H\": 6,\n",
-      "\"9H\": 46,\n",
-      "\"10H\": 34,\n",
-      "\"JH\": 22,\n",
-      "\"QH\": 10,\n",
-      "\"KH\": 50,\n",
-      "\"AH\": 38,\n",
-      "\"2S\": 39,\n",
-      "\"3S\": 27,\n",
-      "\"4S\": 15,\n",
-      "\"5S\": 3,\n",
-      "\"6S\": 43,\n",
-      "\"7S\": 31,\n",
-      "\"8S\": 19,\n",
-      "\"9S\": 7,\n",
-      "\"10S\": 47,\n",
-      "\"JS\": 35,\n",
-      "\"QS\": 23,\n",
-      "\"KS\": 11,\n",
-      "\"AS\": 51,\n"
+      "{0: '2C', 40: '3C', 28: '4C', 16: '5C', 4: '6C', 44: '7C', 32: '8C', 20: '9C', 8: '10C', 48: 'JC', 36: 'QC', 24: 'KC', 12: 'AC', 13: '2D', 1: '3D', 41: '4D', 29: '5D', 17: '6D', 5: '7D', 45: '8D', 33: '9D', 21: '10D', 9: 'JD', 49: 'QD', 37: 'KD', 25: 'AD', 26: '2H', 14: '3H', 2: '4H', 42: '5H', 30: '6H', 18: '7H', 6: '8H', 46: '9H', 34: '10H', 22: 'JH', 10: 'QH', 50: 'KH', 38: 'AH', 39: '2S', 27: '3S', 15: '4S', 3: '5S', 43: '6S', 31: '7S', 19: '8S', 7: '9S', 47: '10S', 35: 'JS', 23: 'QS', 11: 'KS', 51: 'AS'}\n"
      ]
     }
    ],
@@ -164,11 +113,14 @@
     "# The big shabang, doing all the translations\n",
     "cards = [2,3,4,5,6,7,8,9,10,\"J\", \"Q\", \"K\", \"A\"]\n",
     "suits = [\"C\", \"D\", \"H\", \"S\"]\n",
+    "outDict = {}\n",
     "for i in range(4):\n",
     "    for j in range(13):\n",
-    "        print(f\"\\\"{cards[j % 13]}{suits[i % 4]}\\\": {CRT(i, 4, j, 13)[0]},\")\n",
+    "        outDict[CRT(i,4,j,13)[0]] = f\"{cards[j % 13]}{suits[i % 4]}\"\n",
+    "        # print(f\"\\\"{cards[j % 13]}{suits[i % 4]}\\\": {CRT(i, 4, j, 13)[0]},\")\n",
     "        # print(f\"| {cards[j % 13]} {suits[i % 4]}     | {CRT(i, 4, j, 13)[0]}     |\")\n",
-    "        # print(f\"{cards[j % 13]} {suits[i % 4]} -> {CRT(i, 4, j, 13)[0]}\")"
+    "        # print(f\"{cards[j % 13]} {suits[i % 4]} -> {CRT(i, 4, j, 13)[0]}\")\n",
+    "print(outDict)"
    ]
   },
   {
